# Linux-sys

./: README.md
crlib/: CMakeLists.txt  dl_function.c  execute.sh  main.c  main.cpp  main.h  main.hpp  mul.c  mul_fun.cpp  sum.c  sum_fun.cpp
directory/: dir_file.c
file_management/: file_op.c
fork/: cow.c  exec_fork.c  file_error.c  fork_function.c  wait_fork.c
link/: hard_soft.c
rand/: rand_generate.c
resource/: resource_management.c
signal/: kill_imp.c
stat/: file_stat.c
system_call/: system_call.c  system_fork.c
